--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Untitled Beebee Renderer</title>
+    <title>Beebee Renderer - Act 4 Integrated</title>
     <script src="https://cdn.jsdelivr.net/gh/jnordberg/gif.js/dist/gif.js"></script>
     <style>
         body { background: #1a1a1a; color: white; font-family: sans-serif; display: flex; flex-direction: column; align-items: center; margin: 0; padding: 10px; }
@@ -13,12 +13,7 @@
         .controls-panel { flex: 1; display: flex; flex-direction: column; gap: 8px; }
         .grid-controls { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; }
         .full-width { grid-column: span 2; }
-
-        @media (min-width: 900px) {
-            .app-layout { flex-direction: row; align-items: flex-start; padding: 25px; }
-            .controls-panel { max-height: 85vh; overflow-y: auto; padding-right: 5px; }
-        }
-
+        @media (min-width: 900px) { .app-layout { flex-direction: row; align-items: flex-start; padding: 25px; } .controls-panel { max-height: 85vh; overflow-y: auto; padding-right: 5px; } }
         select, button { padding: 12px; background: #3d3d3d; color: white; border: 1px solid #555; border-radius: 8px; font-size: 14px; outline: none; cursor: pointer; }
         .active { background: #e74c3c !important; font-weight: bold; }
         .vibrate-btn.on { background: #9b59b6 !important; }
@@ -28,7 +23,6 @@
         .random-btn { background: #f39c12; color: #1a1a1a; font-weight: bold; }
         .download-btn { background: #27ae60; border: none; font-weight: bold; }
         .reset-btn { background: transparent; border: 1px solid #444; color: #666; font-size: 11px; margin-top: 10px; padding: 5px; width: 100%; }
-        
         #status { font-size: 0.9em; color: #f1c40f; text-align: center; display: none; padding: 10px; font-weight: bold; }
         label { font-size: 0.7em; color: #888; margin-top: 5px; font-weight: bold; text-transform: uppercase; }
         hr { border: 0; border-top: 1px solid #444; width: 100%; margin: 10px 0; }
@@ -93,8 +87,36 @@ const acts = {
     act1: { src: 'act1_beebee.png', grid: { width: 4 }, anchor: { x: 273, y: 200 }, frame: { w: 720, h: 500 }, frames: ["body_normal","body_fear","body_point_crotch","body_point_heart","body_sing","mouth_normal","mouth_normal_talk","mouth_small","mouth_small_talk","mouth_small_lock","eyes_normal","eyes_normal_right","eyes_uncertain","eyes_uncertain_right","eyes_narrow","eyes_narrow_eyebrow","eyes_fear","eyes_pretty","eyes_wat","eyes_wat_2","body_panic*","body_panic_2*","body_scream_anger*","body_scream_anger_2*","body_scream*","body_scream_2*","body_flail*","body_flail2*","body_flail3*","body_flail4*","mouth_smile","mouth_smile_talk","mouth_smile_lock","eyes_smile","eyes_look","eyes_look_sad","eyes_look_sad_smile","eyes_pained1","eyes_pained2","mouth_shut","eyes_anger","body_meta*","body_laugh*","body_pride_talk*","body_pride*","body_squeeze_talk*","body_squeeze*"], loops: [{ trigger: "panic*", sequence: ["body_panic*", "body_panic_2*"], wait: 0.07 }, { trigger: "scream*", sequence: ["body_scream*", "body_scream_2*"], wait: 0.1 }] },
     act2: { src: 'battle_bb.png', grid: { width: 10 }, anchor: { x: 292.5, y: 249.4 }, frame: { w: 720, h: 500 }, frames: ["body_normal","body_two_up","body_chest","body_point","body_one_up","body_scream_a_1*","body_scream_a_2*","body_shocked*","mouth_small","mouth_small_talk","mouth_normal","mouth_normal_talk","mouth_smile","mouth_smile_talk","eyes_normal","eyes_normal_r","eyes_suspect","eyes_suspect_r","eyes_sad","eyes_sad_r","eyes_shock","eyes_happy","eyes_happy_r","eyes_closed","eyes_judge","body_judge_1","body_judge_2","body_scream_b_1*","body_scream_b_2*","body_scream_c_1*","body_scream_c_2*","body_cry_1*","body_cry_2*","body_cry_3*","body_cry_4","mouth_cry_talk","mouth_cry","eyes_cry","eyes_cry_2","body_cry_5*","body_cry_6","mouth_right","mouth_right_talk","eyes_cry_r_1","eyes_cry_r_2","eyes_cry_r_3","eyes_cry_r_4","mouth_blank","eyes_blank","eyes_asdf","eyes_angry","eyes_sad_2","eyes_wat","body_attacked*","body_frazzled","mouth_frazzled_talk","mouth_frazzled","eyes_frazzled","body_panicked","mouth_panicked","mouth_panicked_talk","eyes_panicked","body_special_a*","body_special_b_1*","body_special_b_2*","body_special_b_3*","body_special_c*","body_final_1*","body_final_2*","body_final_3*","body_final_4*","body_yell_1*","body_yell_2*","body_yell_angry_1*","body_yell_angry_2*"], loops: [{ trigger: "final*", sequence: ["body_final_1*", "body_final_2*", "body_final_3*", "body_final_4*"], wait: 0.05 }] },
     act3: { src: 'fight_bb.png', grid: { width: 8 }, anchor: { x: 270, y: 223 }, frame: { w: 720, h: 500 }, frames: ["body_normal_1","body_normal_2","body_normal_3","body_normal_4","mouth_sorry","mouth_sorry_talk","eyes_sorry_down","eyes_sorry","eyes_sorry_up","mouth_normal","mouth_normal_talk","eyes_oh_crap","eyes_start","eyes_normal","eyes_angry","eyes_sad","mouth_ignore","mouth_ignore_talk","eyes_ignore","eyes_ignore_oh_crap","body_attacked*","body_dead*","body_special_attack*"], loops: [] },
-    act4_convo: { src: 'bb_convo.png', grid: { width: 8 }, anchor: { x: 171, y: 242 }, frame: { w: 500, h: 500 }, layers: ["coneb", "body", "mouth", "eyes", "cone"], frames: ["body_normal","body_chest","body_two_up","body_one_up","body_paw","cone_normal","coneb_normal","mouth_normal","mouth_normal_talk","mouth_narrow","mouth_narrow_talk","mouth_smile","mouth_smile_talk","mouth_scream","mouth_scream_talk","cone_scream","coneb_scream","eyes_normal","eyes_normal_r","eyes_normal_u","eyes_normal_d","eyes_look_down","eyes_scream","eyes_scream_sad","eyes_super_sad","eyes_closed","eyes_closed_annoyed","eyes_sexy","eyes_smile","eyes_smile_r","eyes_smile_u","eyes_smile_d","eyes_angry","eyes_angry_r","eyes_angry_u","eyes_angry_d","eyes_surprise","eyes_surprise_r","eyes_surprise_u","eyes_surprise_d","eyes_annoyed","eyes_annoyed_r","eyes_annoyed_u","eyes_annoyed_d","eyes_sad","eyes_sad_r","eyes_sad_u","eyes_sad_d","eyes_suspect","eyes_suspect_r","body_karate_1*","body_karate_2*","cone_karate","coneb_karate","body_yap_1*","body_yap_2*","body_yap_3*","body_yap_4*","cone_yap_1","cone_yap_2","cone_yap_3","cone_yap_4","eyes_blank","mouth_blank","coneb_blank"], loops: [{ trigger: "yap*", sequence: ["body_yap_1*", "body_yap_2*", "body_yap_3*", "body_yap_4*"], wait: 0.05 }, { trigger: "karate*", sequence: ["body_karate_1*", "body_karate_2*"], wait: 0.25 }] },
-    act4_closer: { src: 'bb_closer.png', grid: { width: 8 }, anchor: { x: 171, y: 242 }, frame: { w: 500, h: 500 }, layers: ["body"], frames: ["body_normal","body_normal_2","body_normal_3","body_normal_4","body_normal_5","body_normal_6","body_normal_7","body_normal_8","body_normal_9","body_normal_10","body_normal_11","body_normal_12","body_normal_13","body_normal_14","body_normal_15","body_normal_16","body_normal_17","mouth_blank","body_normal_18","body_normal_19","body_normal_20","body_normal_21","eyes_blank","eyes_blank_2","eyes_blank_3","eyes_blank_4","eyes_blank_5","eyes_blank_6","eyes_blank_7","body_normal_22"], loops: [] }
+    act4_convo: { 
+        src: 'bb_convo.png', 
+        grid: { width: 8 }, 
+        anchor: { x: 171, y: 242 }, 
+        frame: { w: 500, h: 500 }, 
+        layers: ["coneb", "body", "mouth", "eyes", "cone"], 
+        frames: [
+            "body_normal", "body_chest", "body_two_up", "body_one_up", "body_paw", "cone_normal", "coneb_normal", "mouth_normal",
+            "mouth_normal_talk", "mouth_narrow", "mouth_narrow_talk", "mouth_smile", "mouth_smile_talk", "mouth_scream", "mouth_scream_talk", "cone_scream",
+            "coneb_scream", "eyes_normal", "eyes_normal_r", "eyes_normal_u", "eyes_normal_d", "eyes_look_down", "eyes_scream", "eyes_scream_sad",
+            "eyes_super_sad", "eyes_closed", "eyes_closed_annoyed", "eyes_sexy", "eyes_smile", "eyes_smile_r", "eyes_smile_u", "eyes_smile_d",
+            "eyes_angry", "eyes_angry_r", "eyes_angry_u", "eyes_angry_d", "eyes_surprise", "eyes_surprise_r", "eyes_surprise_u", "eyes_surprise_d",
+            "eyes_annoyed", "eyes_annoyed_r", "eyes_annoyed_u", "eyes_annoyed_d", "eyes_sad", "eyes_sad_r", "eyes_sad_u", "eyes_sad_d",
+            "eyes_suspect", "eyes_suspect_r", "body_karate_1*", "body_karate_2*", "cone_karate", "coneb_karate", "body_yap_1*", "body_yap_2*",
+            "body_yap_3*", "body_yap_4*", "cone_yap_1", "cone_yap_2", "cone_yap_3", "cone_yap_4", "eyes_blank", "mouth_blank", "coneb_blank"
+        ], 
+        loops: [
+            { trigger: "yap*", sequence: ["body_yap_1*", "body_yap_2*", "body_yap_3*", "body_yap_4*"], wait: 1/24 }, 
+            { trigger: "karate*", sequence: ["body_karate_1*", "body_karate_2*"], wait: 0.25 }
+        ] 
+    },
+    act4_closer: { 
+        src: 'bb_closer.png', 
+        grid: { width: 8 }, 
+        anchor: { x: 171, y: 242 }, 
+        frame: { w: 500, h: 500 }, 
+        layers: ["body"], 
+        frames: ["body_normal","body_normal_2","body_normal_3","body_normal_4","body_normal_5","body_normal_6","body_normal_7","body_normal_8","body_normal_9","body_normal_10","body_normal_11","body_normal_12","body_normal_13","body_normal_14","body_normal_15","body_normal_16","body_normal_17","mouth_blank","body_normal_18","body_normal_19","body_normal_20","body_normal_21","eyes_blank","eyes_blank_2","eyes_blank_3","eyes_blank_4","eyes_blank_5","eyes_blank_6","eyes_blank_7","body_normal_22"], 
+        loops: [] 
+    }
 };
 
 const canvas = document.getElementById('beebeeCanvas'), ctx = canvas.getContext('2d');
@@ -122,8 +144,11 @@ function populateSelects(shouldSave = true) {
 
 function updateUI() {
     const isSpecial = sSel.value !== 'none';
-    bSel.disabled = isSpecial; mSel.disabled = isSpecial; eSel.disabled = isSpecial;
-    cBtn.style.display = currentAct === 'act4_convo' ? 'block' : 'none';
+    const isAct4Convo = currentAct === 'act4_convo';
+    bSel.disabled = isSpecial; 
+    mSel.disabled = isSpecial || !isAct4Convo; 
+    eSel.disabled = isSpecial || !isAct4Convo;
+    cBtn.style.display = isAct4Convo ? 'block' : 'none';
     const hasL = acts[currentAct].loops.some(l => sSel.value.includes(l.trigger.replace('*','')));
     lBtn.style.display = (hasL || isLooping) ? 'block' : 'none';
     vBtn.textContent = vibrateOn ? "Vibration: ON" : "Vibration: OFF"; vBtn.className = vibrateOn ? "vibrate-btn on" : "vibrate-btn";
